--- a/JMock.csproj
+++ b/JMock.csproj
@@ -4,6 +4,30 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Title>JMock - A Mocking library</Title>
+    <Authors>Jonathan Soderberg</Authors>
+    <Description>JMock - A Mocking library
+
+Usual types and errors to mock common problems
+Alfa being currently built :) </Description>
+    <Copyright>Jonathan Soderberg</Copyright>
+    <PackageProjectUrl>https://github.com/jonathanbex/JMock</PackageProjectUrl>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <Version>0.1</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Update="LICENSE">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Update="README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
 
 </Project>
